--- a/.gitignore
+++ b/.gitignore
@@ -1070,3 +1070,21 @@ node_modules/xdg-basedir/license
 node_modules/xdg-basedir/package.json
 node_modules/xdg-basedir/readme.md
 node_modules/chalk/node_modules/supports-color/license
+index.js
+node_modules/on-headers/README.md
+node_modules/on-headers/package.json
+node_modules/on-headers/LICENSE
+node_modules/on-headers/index.js
+node_modules/on-headers/HISTORY.md
+node_modules/morgan/README.md
+node_modules/morgan/package.json
+node_modules/morgan/node_modules/depd/Readme.md
+node_modules/morgan/node_modules/depd/package.json
+node_modules/basic-auth/HISTORY.md
+node_modules/basic-auth/LICENSE
+node_modules/basic-auth/package.json
+node_modules/basic-auth/README.md
+node_modules/morgan/HISTORY.md
+node_modules/morgan/LICENSE
+node_modules/morgan/node_modules/depd/History.md
+node_modules/morgan/node_modules/depd/LICENSE
