--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "Guy Leifer",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.20.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.10.0"
   },
